# environs

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  dev-requirements.txt  envargs.py  environs.py  pyproject.toml  renovate.json  setup.cfg  setup.py  tasks.py  test_envargs.py  test_environs.py  test_tinyenv.py  tinyenv.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build-release.yml  lint_python.yml
environs/: __init__.py
examples/: deferred_validation_example.py  django_example.py  fileaware_example.py  marshmallow_example.py  plugin_example.py  prefix_example.py  simple_example.py  validation_example.py
src/environs/: __init__.py  exceptions.py  fields.py  types.py
tests/: .another.env  .custom.env  .env  test_environs.py
tests/mypy_test_cases/: env.py  test_env.py
tests/subfolder/: .another.env
