[metadata]
name = environs
version = attr: environs.__version__
author = Steven Loria
author_email = sloria1@gmail.com
license = MIT
description = simplified environment variable parsing
keywords =
    environment
    variables
    parsing
    config
    configuration
    12factor
    envvars
url = https://github.com/sloria/environs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
project_urls =
    Issues = https://github.com/sloria/environs/issues
    Changelog = https://github.com/sloria/environs/blob/master/CHANGELOG.md

[options]
packages = environs
zip_safe = False
install_requires = marshmallow>=3.0.0; python-dotenv
python_requires = >=3.7

[options.extras_require]
django =
    dj-database-url
    dj-email-url
    django-cache-url
tests =
    pytest
    environs[django]
lint =
    flake8==7.0.0
    flake8-bugbear==23.11.28
    mypy==1.8.0
    pre-commit~=3.6
dev =
    environs[tests,lint]
    tox

[options.package_data]
environs = py.typed

[flake8]
ignore = E203, E266, E501, W503, B907
max-line-length = 110
max-complexity = 18
select = B,C,E,F,W,T4,B9

[mypy]
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
